finish CRUD for restaurant

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ENV=LOCAL
 PORT=9000
-# SSL=TRUE
-API_VERSION=2.0
+SSL=FALSE
+API_VERSION=0.0
 DB_USER="postgres"
 DB_PASS="local"
 DB_NAME="golang_gin_db"
